--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My App</title>
+    <title>My Website</title>
 </head>
 <body>
-    <h1>Welcome to My App</h1>
+    <h1>Hello from Docker!</h1>
 </body>
 </html>
+
