--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <title>My Website</title>
 </head>
 <body>
-    <h1>Hello from Shivansh!</h1>
+    <h1>Hello from Docker!</h1>
 </body>
 </html>
 
